Ajout de la section d'accueil avec navigation et contenu principal

--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
 </head>
 
 <body>
-    
+    <section id="accueil">
+    <header>
+        <!-- Logo Sochi -->
+        <div class="logo">
+            <img src="./images/logo.png" alt="Logo Sochi">
+        </div>
+        <!-- Navigation -->
+        <nav>
+            <a href="#about">About</a>
+            <a href="#amenities">Amenities</a>
+            <a href="#rooms">Rooms</a>
+            <a href="#restaurant">Restaurant</a>
+            <a href="#gallery">Gallery</a>
+        </nav>
+    </header>
+
+    <!-- Page Accueil -->
+    <main>
+            <div class="H-content">
+                <h1>Hello.Salut.Hola</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur 
+                    voluptate, voluptas architecto fugiat eligendi quis deleniti molestiae officiis autem. 
+                    Alias ullam aliquam quis veritatis quidem omnis laboriosam non quasi recusandae voluptate 
+                    dolorem, esse perferendis explicabo, modi nisi eum vero commodi!</p>
+            </div>
+    </main>
+    </section>
+
 </body>
 </html>
