Ajout de la section "About" avec images et texte dans le fichier HTML

--- a/index.html
+++ b/index.html
@@ -38,5 +38,25 @@
     </main>
     </section>
 
+    <section id="about">
+        <div class="about-images">
+            <img src="images/a1.jpg" class="image1">
+            <img src="images/a2.jpg" class="image2">
+        </div>
+        <div class="about-textes">
+            <p class="sous-titre">RAISING COMFORT TO THE HIGHEST LEVEL</p>
+            <h3>Welcome to Luviana Hotel Resort</h3>
+            <p class="texte1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatem 
+                reprehenderit unde, architecto eius, molestias reiciendis ex, eum aperiam molestiae autem 
+                dignissimos sed consectetur. Ipsam rem voluptate aperiam minus sint.</p>
+            <p class="texte2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem 
+                labore inventore praesentium enim dicta ipsa commodi, consequatur id sequi beatae blanditiis 
+                quas iusto debitis optio sint quasi, soluta illo asperiores at saepe. Alias, ad enim?</p>
+            <nav>
+                <a href="#accueil">Home</a>
+            </nav>
+        </div>
+    </section>
+
 </body>
 </html>
