--- a/index.html
+++ b/index.html
@@ -38,5 +38,29 @@
     </main>
     </section>
 
+    <section id="amenities">
+        <div class="background-con">
+            <div class="overlay-text">
+                <h3 class="sous-titre4">Our Amenities</h3>
+                <p class="text-st">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore magni dolor molestiae eaque saepe! Similique vitae ea assumenda magnam aliquid aliquam accusamus at, nemo commodi eveniet quod fugiat, facere distinctio!
+                </p>
+                <div class="icon-list">
+                    <p><span class="fas fa-swimming-pool"></span> Swimming pool</p>
+                    <p><span class="fas fa-ship"></span> Boat Tours</p>
+                    <p><span class="fas fa-water"></span> Diving & Snorkeling</p>
+                    <p><span class="fas fa-dumbbell"></span> Gym & Yoga</p>
+                    <p><span class="fas fa-swimmer"></span> Surfing Lessons</p>
+                    <p><span class="fas fa-umbrella-beach"></span> Private Beach</p>
+                    <p><span class="fas fa-spa"></span> Spa & Massage</p>
+                    <p><span class="fas fa-microphone"></span> Conference Room</p>
+                </div>
+            </div>
+            <nav>
+                <a href="#accueil" class="home-btn">Home</a>
+            </nav>
+        </div>
+    </section>
+
 </body>
 </html>
