styles CSS pour la mise en page et l'arrière-plan (image)

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <section id="amenities">
         <div class="background-con">
             <div class="overlay-text">
-                <h3 class="sous-titre4">Our Amenities</h3>
-                <p class="text-st">
+                <h3 class="sous-titre-amt">Our Amenities</h3>
+                <p class="texte-amt">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore magni dolor molestiae eaque saepe! Similique vitae ea assumenda magnam aliquid aliquam accusamus at, nemo commodi eveniet quod fugiat, facere distinctio!
                 </p>
                 <div class="icon-list">
